[build-system]
requires = [
    "setuptools>=42,<70",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "Tools",
    "Libraries",
]

[project]
name="PyKotor"
version="1.7"
description="Read, modify and write files used by KotOR's game engine."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "library", "holocron", "toolset", "pykotor", "editor", "holopatcher", "tslpatcher"]
requires-python = ">= 3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "charset-normalizer>=2.0.0,<3.3.0; python_version<\"3.9\"",
    "charset-normalizer>=2.0.0; python_version>=\"3.9\"",
    "defusedxml>=0.7.1",
    "pycryptodome>=3.23.0",
    "astroid>=3.2.0,<3.5.0; python_version>=\"3.8\"",
    "autoflake>=2.3.1; python_version>=\"3.8\"",
    "iniconfig>=2.1.0; python_version>=\"3.8\"",
    "mypy>=1.0.0,<1.10.0; python_version>=\"3.8\"",
    "mypy-extensions>=1.1.0; python_version>=\"3.8\"",
    "pyflakes>=2.0.0,<3.4.0; python_version>=\"3.8\"",
    "pylint>=2.0.0,<3.3.9; python_version>=\"3.8\"",
    "pytest>=7.0.0,<8.0.0; python_version>=\"3.8\"",
    "pytest-html>=3.0.0,<4.0.0; python_version>=\"3.8\"",
    "pytest-metadata>=2.0.0,<3.0.0; python_version>=\"3.8\"",
    "pytest-xdist>=2.0.0,<3.8.0; python_version>=\"3.8\"",
    "ruff>=0.1.0,<0.4.0; python_version>=\"3.8\"",
    "snakeviz>=2.0.0,<2.2.2; python_version>=\"3.8\"",
    "types-pillow>=10.2.0.20240822; python_version>=\"3.8\"",
    "types-send2trash>=1.8.2.7; python_version>=\"3.8\"",
    "typing-extensions>=4.5.0,<4.9.0; python_version<\"3.9\"",
    "typing-extensions>=4.5.0; python_version>=\"3.9\"",
]
font = [
  "pillow>=9.5; python_implementation == 'CPython'",       # required for TXI/TGA fonts (CPython)
  "pillow>10,<11.1.0; python_implementation == 'PyPy'",    # required for TXI/TGA fonts (PyPy)
]
secure_xml = ["defusedxml~=0.7"]    # secure XML parsing
encodings = ["charset-normalizer>=2.0,<3.4"]  # used for localized string decodings
gl = [
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
  "numpy~=1.22",      # ( might need 1.22.2 )
  "PyOpenGL~=3.1",    # ( might need 3.1.6 )
  "PyGLM>=2.0,<2.8; python_implementation == 'CPython'",  # ( might need 2.5.7 )
]

[project.urls]
Homepage = "https://github.com/NickHugi/PyKotor"
Documentation = "https://github.com/NickHugi/PyKotor/blob/master/README.md"
Repository = "https://github.com/NickHugi/PyKotor.git"
Issues = "https://github.com/NickHugi/PyKotor/issues"
#Changelog = "https://github.com/NickHugi/PyKotor/blob/master/CHANGELOG.md"

########################################################
## define only linter configurations below this point ##
########################################################

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
tests = ["B201", "B301"]

[tool.black]
exclude = '''
/(
    \.git
| \.hg
| \.github
| \.mypy_cache
| \.tox
| \.venv
| venv
| _build
| buck-out
| build
| __pycache__
| dist
| nuitka_dist
| \.history
| \.idea
| \.chat
| \.ruff_cache
| \.trunk
| .mdx
| .mdl
)/
'''

[tool.pyright]
extraPaths = [
    "Libraries/PyKotor/src",
    "Libraries/Utility/src"
]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.8"

[tool.isort]
atomic = true
line_length = 100
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.mccabe]
max-complexity = 25

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [
  '\.mypy_cache',
  '\.venv',
  "__pycache__",
  "build",
  "dist",
  "tests/results",
  "venv"
]
explicit_package_bases = true
mypy_path = [
  "Libraries/PyKotor/src",
  "Libraries/bioware-kaitai-formats/src",
  "Tools/HolocronToolset/src",
  "Tools/HoloPatcher/src",
  "Tools/HoloPazaak/src",
  "Tools/KotorDiff/src",
  "Tools/KotorMCP/src",
  "tests",
]
namespace_packages = true
no_implicit_optional = true
python_version = "3.9"  # must be set to the minimum supported python version
warn_return_any = true
warn_unused_configs = true

[tool.pylintrc]
max-line-length = 100

[tool.pylint.MASTER]
ignore-paths = [
  "^\\.venv/.*$",
  "^vendor/.*$",
  "^Tools/.*/src/toolset/uic/.*$",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "duplicate-code",
]
max-line-length = 100

[tool.pyright]
analyzeUnannotatedFunctions = true
deprecateTypingAliases = false
exclude = [
  "**/.*/**",
  "**/.venv/**",
  "**/__pycache__/**",
  "**/build/**",
  "**/dist/**",
  "**/node_modules/**",
  "**/vendor/**",
  "**/venv/**"
]
extraPaths = [
  "Libraries/PyKotor/src",
  "Libraries/bioware-kaitai-formats/src",
  "Tools/HolocronToolset/src",
  "Tools/HoloPatcher/src",
  "Tools/HoloPazaak/src",
  "Tools/KotorDiff/src",
  "Tools/KotorMCP/src",
]
include = ["*.py"]
pythonVersion = "3.8"
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"

[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = true

[tool.pytest.ini_options]
addopts = '-ra -q -m "not slow"'
log_cli = true
log_cli_format = "%(message)s"
log_cli_level = "CRITICAL"
log_file = "pytest.log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_level = "DEBUG"
markers = [
  "gui: marks tests that require a GUI (deselect with '-m \"not gui\"')",
  "slow: marks tests that are slow (deselect with '-m \"not slow\"')"
]
qt_api = "pyqt6" # Default, can be overridden by PYTEST_QT_API environment variable (moved to conftest.py)
testpaths = [
  "Libraries/PyKotor/tests",
  "Tools/HolocronToolset/tests",
  "tests",
]
timeout = 120 # 2 minutes per test
timeout_method = "thread" # Use thread-based timeout (works on Windows)

[tool.ruff]
fix = true
force-exclude = true
line-length = 100
output-format = "grouped" # Group violations by containing file.
preview = false
respect-gitignore = false
show-fixes = true
src = [
  "Libraries/PyKotor/src",
  "Tools/HolocronToolset/src",
  "Tools/HoloPatcher/src",
  "Tools/HoloPazaak/src",
  "Tools/KotorDiff/src",
  "Tools/KotorMCP/src",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
preview = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
exclude = [".venv", ".venv*"]
external = ["V"]
ignore = [
# The following rules are too strict to be realistically used by ruff:
    "ANN002",   # Checks that function *args arguments have type annotations.
    "ANN003",   # Checks that function **kwargs arguments have type annotations.
    "ANN101",   # Checks that instance method self arguments have type annotations.
    "ANN102",   # Checks that class method cls arguments have type annotations.
    "ANN204",   # Missing return type annotation for special method
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "ARG002",   # Unused method argument: `method`
    "BLE001",   # Do not catch blind exception: `Exception`
    "C901",     # Function is too complex
    "COM812",   # missing-trailing-comma
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "D205",     # 1 blank line required between summary line and description
    "D401",     # First line of docstring should be in imperative mood
    "D413",     # Missing blank line after last section 'xyz'
    "D417",     # Missing argument description in the docstring for {definition}: {name}
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "ERA001",   # Found commented out code.
    "G004",     # Logging statement uses f'' string.
    "N802",     # Function name `screenToWorld` should be lowercase
    "N806",     # Variable `jumpToOffset` in function should be lowercase
    "N815",     # Variable `var` in class scope should not be mixedCase
    "PERF203",  # `try`-`except` within a loop incurs performance overhead
    "PLC0415",  # `import` should be at the top-level of a file
    "PLR0904",  # Too many public methods
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call (N > 5)
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison, consider replacing X with a constant variable
    "RET504",   # Unnecessary assignment to `varname` before `return` statement
    "RUF100",   # Unused `noqa` directive (non-enabled: `PLC0415`)
    "S101",     # Use of `assert` detected.
    "SIM108",   # Use ternary operator instead of 'if' 'else' block
    "SIM114",   # Combine `if` branches using logical `or` operator
    "T201",     # 'print' detected
    "TD001",    # Invalid TODO tag: `FIXME`
    "TRY003",   # Avoid specifying long messages outside the exception class
#    "D213",     # Multi-line docstring summary should start at the second line
#    "D400",     # First line should end with a period
#    "D403",     # First word of the first line should be capitalized: {} -> {}
#    "D404",     # First word of the docstring should not be "This"
#    "FBT001",   # Boolean positional arg in function definition
#    "FBT002",   # Boolean default value in function definition

# The following are currently violated by the codebase.
#    "D205",     # 1 blank line required between summary line and description
#    "E402",     # Module level import not at top of file
#    "FIX004",   # Line contains HACK, consider resolving the issue
#    "PD901",    # df is a bad variable name. Be kinder to your future self.
#    "PLR2004",  # Magic value used in comparison, consider replacing X with a constant variable
#    "S101",     # Use of assert detected
#    "S314",     # Using `xml` to parse untrusted data is known to be vulnerable to XML attacks; use `defusedxml` equivalents
#    "S605",     # Starting a process with a shell, possible injection detected
#    "SLF001",   # Private member accessed
#
# According to ruff documentation, the following rules should be avoided when using its formatter:
#
#    "W191",     # tab-indentation
#    "E111",     # indentation-with-invalid-multiple
#    "E114",     # indentation-with-invalid-multiple-comment
#    "E117",     # over-indented
#    "D206",     # indent-with-spaces
#    "D300",     # triple-single-quotes
#    "Q000",     # bad-quotes-inline-string
#    "Q001",     # bad-quotes-multiline-string
#    "Q002",     # bad-quotes-docstring
#    "Q003",     # avoidable-escaped-quote
#    "COM812",   # missing-trailing-comma
#    "COM819",   # prohibited-trailing-comma
    "ISC001",
]
task-tags = ["FIXME", "HACK", "TODO"]
unfixable = [
  "ERA001",
  "F841",
  "N815",
  "RUF100" # Unused `noqa` directive
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "list"
parametrize-values-row-type = "list"
parametrize-values-type = "list" # default
raises-require-match-for = ["requests.RequestException"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
# Add quotes around type annotations, if doing so would allow an import to be moved into a type-checking block.
quote-annotations = true # Does nothing when from __future__ import annotations is used
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = false
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = [
  "I002" # from __future__ import annotations
]
# "tests/*.py" = ["ALL"]
".github/*py" = ["INP001"]
".mdl" = ["ALL"]
".mdx" = ["ALL"]
"Tools/HolocronToolset/src/toolset/*.py" = [
  "A001",
  "FBT003",
  "N802",
  "N803",
  "N806"
]
"Tools/HolocronToolset/src/toolset/uic/*.py" = ["ALL"]
"Libraries/bioware-kaitai-formats/src/bioware_kaitai_formats/*.py" = ["ALL"]
"__init__.py" = ["F401", "I001", "I002", "TID252"]
"globalsettings.py" = ["F401", "I001"]
"pykotor/resource/formats/ncs/compiler/*.py" = ["ALL"]
"resources_rc.py" = ["ALL"]
"tests/results" = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 200

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.style]
based_on_style = "google"
split_arguments_when_comma_terminated = true
split_before_named_assigns = true
split_complex_comprehension = true

[tool.yapf]
ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGNS = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DISABLE_SPLIT_LIST_WITH_COMMENT = true
INDENT_DICTIONARY_VALUE = true
column_limit = 175
join_multiple_lines = false
no_spaces_around_selected_binary_operators = "*,/"
split_before_dict_set_generator = true
split_before_expression_after_opening_paren = false
split_complex_comprehension = true
split_penalty_after_opening_bracket = 50
split_penalty_excess_character = 75 # Lower penalty for going over the column limit
split_penalty_for_added_line_split = 100 # Discourage adding new line splits
